fix cursor width on Safari and clean-up gsap grid animations

--- a/site/src/styles/component_styles/cursor.module.scss
+++ b/site/src/styles/component_styles/cursor.module.scss
@@ -1,14 +1,3 @@
-// .cursor,
-// .cursor_content {
-//   pointer-events: none;
-//   position: fixed;
-//   top: 50%;
-//   left: 50%;
-//   transform: translate(-50%, -50%);
-//   opacity: 1;
-//   z-index: 10000;
-// }
-
 .cursor {
   width: 8px;
   height: 8px;
@@ -19,7 +8,7 @@
 .cursor_content {
   background-color: rgba(255, 255, 255, 0.84);
   padding: 0.3em;
-  width: max-content;
+  width: auto;
   color: rgb(0, 0, 0);
 }
 
